--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
     </style>
   </head>
   <body>
-    <h1>张大仙</h1>
+    <nav>
+      <ol>
+        <li><a href="#zhangdaxian">个人简介</a></li>
+        <li><a href="#events">重要事件</a></li>
+        <li><a href="#awards">获奖记录</a></li>
+        <li><a href="#words">主要作品</a></li>
+        <li><a href="#pictures">生活帅照</a></li>
+        <li><a href="#evaluation">人物评价</a></li>
+      </ol>
+    </nav>
+    <h1 id="zhangdaxian">张大仙</h1>
     <p>
       张宏发,即“张大仙”,虎牙直播人气主播,以直播MOBA类手机游戏《王者荣耀》出名,
       在直播中通过出色的表现及略带骚气傲娇的直播风格获得了非常高的口碑。
@@ -21,7 +31,7 @@
       成为《王者荣耀》英雄中露娜玩的最好的玩家之一。8月3日,张宏发与斗鱼直播平台的合约届满,
       并宣布加入虎牙直播平台 。
     </p>
-    <h2>重要时间</h2>
+    <h2 id="events">重要事件</h2>
     <ul>
       <li>2015年,张大仙是《王者荣耀》早期便开始进行直播的主播之一。</li>
       <li>
@@ -36,7 +46,7 @@
       </li>
       <li>2019年8月1日张大仙宣布将于8月3日在虎牙直播进行直播。</li>
     </ul>
-    <h2>获奖记录</h2>
+    <h2 id="awards">获奖记录</h2>
     <ol>
       <li>荣获2016年游戏风云榜“年度新晋电竞主播”奖项。</li>
       <li>荣获2018年金秒奖第四季度的“年度创作人”奖项。</li>
@@ -46,7 +56,7 @@
       </li>
       <li>荣获2022年度王者荣耀最具影响力主播。</li>
     </ol>
-    <h2>主要作品</h2>
+    <h2 id="words">主要作品</h2>
 
     <table>
       <thead>
@@ -92,13 +102,13 @@
       <tfoot></tfoot>
     </table>
 
-    <h2>生活照</h2>
+    <h2 id="pictures">生活帅照</h2>
 
     <div><img width="400" src="1.jpg" alt="图片1" /></div>
     <div><img width="400" src="2.jpg" alt="图片2" /></div>
     <div><img width="400" src="3.jpg" alt="图片3" /></div>
 
-    <h2>人物评价</h2>
+    <h2 id="evaluation">人物评价</h2>
     <p>
       如果论王者荣耀技术方面的话，大仙在当下热门主播当中，应该不是最好的。
       但是，相信看过大仙直播的也深有体会，看他的直播却是能真真切切能带给人欢乐的。
@@ -109,5 +119,6 @@
       他是为数不多的几位王者荣耀头部主播，拥有很高的粉丝量和人气，同时他也没有什么负面的新闻，再加上他顺风说骚话，逆风讲道理的直播风格，
       使得他的路人缘也是非常的好。——（酷游时空）
     </p>
+    <div style="height: 500px"></div>
   </body>
 </html>
