--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,
+     minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>张大仙</title>
     <style>
       img {
@@ -104,9 +108,21 @@
 
     <h2 id="pictures">生活帅照</h2>
 
-    <div><img width="400" src="1.jpg" alt="图片1" /></div>
-    <div><img width="400" src="2.jpg" alt="图片2" /></div>
-    <div><img width="400" src="3.jpg" alt="图片3" /></div>
+    <div>
+      <a href="1.jpg" target="_blank">
+        <img width="400" src="1.jpg" alt="图片1" />
+      </a>
+    </div>
+    <div>
+      <a href="2.jpg" target="_blank">
+        <img width="400" src="2.jpg" alt="图片2" />
+      </a>
+    </div>
+    <div>
+      <a href="3.jpg" target="_blank">
+        <img width="400" src="3.jpg" alt="图片3" />
+      </a>
+    </div>
 
     <h2 id="evaluation">人物评价</h2>
     <p>
